# PlasmaMLPALLAS

./: .gitignore  CMakeLists.txt  Doxyfile  Geometry_8hh.html  Geometry_8hh_source.html  History.md  PALLAS_CollSim.cc  PALLAS_Collimateurs_Simulation.code-workspace  PlasmaAccelerationFacilitySim.cc  PlasmaMLPALLAS.cc  PlasmaMLPALLASActionInitialization_8cc.html  PlasmaMLPALLASActionInitialization_8cc__incl.map  PlasmaMLPALLASActionInitialization_8cc__incl.md5  PlasmaMLPALLASActionInitialization_8hh__incl.map  PlasmaMLPALLASEventAction_8cc__incl.md5  PlasmaMLPALLASEventAction_8hh__dep__incl.map  PlasmaMLPALLASEventAction_8hh_source.html  PlasmaMLPALLASGeometryConstruction_8cc__incl.map  PlasmaMLPALLASGeometryConstruction_8cc__incl.md5  PlasmaMLPALLASGeometryConstruction_8hh__dep__incl.map  PlasmaMLPALLASGeometryConstruction_8hh__dep__incl.md5  PlasmaMLPALLASGeometryConstruction_8hh__incl.map  PlasmaMLPALLASGeometryConstruction_8hh__incl.md5  PlasmaMLPALLASGeometryConstruction_8hh_source.html  PlasmaMLPALLASGeometryMessenger_8cc__incl.map  PlasmaMLPALLASGeometryMessenger_8cc__incl.md5  PlasmaMLPALLASGeometryMessenger_8hh__dep__incl.map  PlasmaMLPALLASGeometryMessenger_8hh__dep__incl.md5  PlasmaMLPALLASGeometryMessenger_8hh__incl.map  PlasmaMLPALLASGeometryMessenger_8hh__incl.md5  PlasmaMLPALLASMagneticField_8cc.html  PlasmaMLPALLASMagneticField_8cc__incl.map  PlasmaMLPALLASMagneticField_8cc__incl.md5  PlasmaMLPALLASMagneticField_8hh.html  PlasmaMLPALLASMagneticField_8hh__dep__incl.map  PlasmaMLPALLASOnnxInference_8cc.html  PlasmaMLPALLASOnnxInference_8hh.html  PlasmaMLPALLASOnnxInference_8hh__incl.map  PlasmaMLPALLASOnnxInference_8hh__incl.md5  PlasmaMLPALLASOnnxInference_8hh_source.html  (+122 more)
.github/workflows/: doxygen.yml
Resultats/: PlasmaMLPALLAS_Routine.ipynb  PlasmaMLPALLAS_Routine.py  Plot_2VD.cc  Plot_efficacite_epaisseur_radius.cc
cmake/: FindOnnxRuntime.cmake  FindOnnxRuntime.cmake~
docs/html/: Geometry_8cc.html  Geometry_8cc__incl.map  Geometry_8cc__incl.md5  Geometry_8hh__dep__incl.map  Geometry_8hh__dep__incl.md5  Geometry_8hh__incl.map  Geometry_8hh__incl.md5  PlasmaMLPALLASActionInitialization_8hh.html  PlasmaMLPALLASActionInitialization_8hh__dep__incl.map  PlasmaMLPALLASActionInitialization_8hh__dep__incl.md5  PlasmaMLPALLASActionInitialization_8hh__incl.md5  PlasmaMLPALLASActionInitialization_8hh_source.html  PlasmaMLPALLASEventAction_8cc.html  PlasmaMLPALLASEventAction_8cc__incl.map  PlasmaMLPALLASEventAction_8hh.html  PlasmaMLPALLASEventAction_8hh__dep__incl.md5  PlasmaMLPALLASEventAction_8hh__incl.map  PlasmaMLPALLASEventAction_8hh__incl.md5  PlasmaMLPALLASGeometryConstruction_8cc.html  PlasmaMLPALLASGeometryConstruction_8hh.html  PlasmaMLPALLASGeometryMessenger_8cc.html  PlasmaMLPALLASGeometryMessenger_8hh.html  PlasmaMLPALLASGeometryMessenger_8hh_source.html  PlasmaMLPALLASMagneticField_8hh__dep__incl.md5  PlasmaMLPALLASMagneticField_8hh__incl.map  PlasmaMLPALLASMagneticField_8hh__incl.md5  PlasmaMLPALLASMagneticField_8hh_source.html  (+130 more)
gdml_models/: Assemblage_2_Cellules.gdml
include/: Geometry.hh  PALLAS_CollSimActionInitialization.hh  PALLAS_CollSimEventAction.hh  PALLAS_CollSimGeometryConstruction.hh  PALLAS_CollSimMagneticField.hh  PALLAS_CollSimPhysics.hh  PALLAS_CollSimPrimaryGeneratorAction.hh  PALLAS_CollSimRunAction.hh  PALLAS_CollSimSteppingAction.hh  PALLAS_CollSimVisManager.hh  ParticleData.hh  PlasmaAccelerationFacilitySimActionInitialization.hh  PlasmaAccelerationFacilitySimEventAction.hh  PlasmaAccelerationFacilitySimGeometryConstruction.hh  PlasmaAccelerationFacilitySimMagneticField.hh  PlasmaAccelerationFacilitySimPhysics.hh  PlasmaAccelerationFacilitySimPrimaryGeneratorAction.hh  PlasmaAccelerationFacilitySimRunAction.hh  PlasmaAccelerationFacilitySimSteppingAction.hh  PlasmaAccelerationFacilitySimVisManager.hh  PlasmaMLPALLASActionInitialization.hh  PlasmaMLPALLASEventAction.hh  PlasmaMLPALLASGeometryConstruction.hh  PlasmaMLPALLASGeometryMessenger.hh  PlasmaMLPALLASMagneticField.hh  PlasmaMLPALLASOnnxInference.hh  PlasmaMLPALLASOnnxParameters.hh  PlasmaMLPALLASPhysics.hh  PlasmaMLPALLASPrimaryGeneratorAction.hh  PlasmaMLPALLASPrimaryGeneratorMessenger.hh  PlasmaMLPALLASQuadrupoleUtils.hh  PlasmaMLPALLASRunAction.hh  PlasmaMLPALLASSteppingAction.hh  PlasmaMLPALLASVisManager.hh
onnxruntime-linux-x64-1.17.1/: README.md
search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_4.js  all_5.js  all_6.js  all_9.js  all_b.js  all_e.js  all_f.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_5.js  enumvalues_6.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_5.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  functions_d.js  functions_e.js  pages_0.js  searchdata.js  variables_2.js  variables_8.js  variables_9.js  variables_a.js  variables_c.js  variables_d.js  variables_e.js
src/: Geometry.cc  PALLAS_CollSimActionInitialization.cc  PALLAS_CollSimEventAction.cc  PALLAS_CollSimGeometryConstruction.cc  PALLAS_CollSimMagneticField.cc  PALLAS_CollSimPhysics.cc  PALLAS_CollSimPrimaryGeneratorAction.cc  PALLAS_CollSimRunAction.cc  PALLAS_CollSimSteppingAction.cc  PALLAS_CollSimVisManager.cc  PlasmaAccelerationFacilitySimActionInitialization.cc  PlasmaAccelerationFacilitySimEventAction.cc  PlasmaAccelerationFacilitySimGeometryConstruction.cc  PlasmaAccelerationFacilitySimMagneticField.cc  PlasmaAccelerationFacilitySimPhysics.cc  PlasmaAccelerationFacilitySimPrimaryGeneratorAction.cc  PlasmaAccelerationFacilitySimRunAction.cc  PlasmaAccelerationFacilitySimSteppingAction.cc  PlasmaAccelerationFacilitySimVisManager.cc  PlasmaMLPALLASActionInitialization.cc  PlasmaMLPALLASEventAction.cc  PlasmaMLPALLASGeometryConstruction.cc  PlasmaMLPALLASGeometryMessenger.cc  PlasmaMLPALLASMagneticField.cc  PlasmaMLPALLASOnnxInference.cc  PlasmaMLPALLASPhysics.cc  PlasmaMLPALLASPrimaryGeneratorAction.cc  PlasmaMLPALLASPrimaryGeneratorMessenger.cc  PlasmaMLPALLASQuadrupoleUtils.cc  PlasmaMLPALLASRunAction.cc  PlasmaMLPALLASSteppingAction.cc  PlasmaMLPALLASVisManager.cc
(+74 files in other folders)
